<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 全局文字 -->
    <string name="hello">Hello World!</string>
    <string name="app_name">富友</string>
    <string name="app_version">v1.0</string>
    <!-- 按钮文字 -->
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_comment">写评论</string>
    <string name="btn_addfans">加关注</string>
    <string name="loading">正在加载···</string>
    <!-- 菜单文字 -->
    <string name="menu_app_write">写微博</string>
    <string name="menu_app_logout">注销账户</string>
    <string name="menu_app_about">应用信息</string>
    <string name="menu_demo_web">网页示例</string>
    <string name="menu_demo_map">地图示例</string>
    <string name="menu_demo_test">测试示例</string>
    <!-- 配置提示 -->
    <string name="config_sign">修改签名</string>
    <string name="config_face">更换头像</string>
    <!-- 提示文字 -->
    <string name="msg_login_fail">登录失败</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_register_fail">注册失败</string>
    <string name="msg_register_success">注册成功</string>
    <!-- 界面文字 -->
    <string name="login_title">用户登录</string>
    <string name="login_username">账户</string>
    <string name="login_password">密码</string>
    <string name="login_remember">记住密码</string>
    <string name="register_submit">注册</string>
    <string name="login">登录</string>
    <string name="edit_submit">保存</string>
    <string name="comment">评论</string>
    <string name="customer_fans">粉丝</string>
    <string name="customer_blog">微博</string>
    <string name="topNetworkError">网络连接后，下拉更新！</string>
    <string name="main_text">富友</string>
    <string name="comment_reply">回复</string>
        
    <string name="tab_1">友说</string>
    <string name="tab_2">公告</string>
    <string name="tab_3">寻物</string>
    <string name="tab_4">二手</string>
    <string name="wonderful_comment">精彩评论</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="ui_create_speak_content_hint">说点什么…</string>

    <string name="secret_all_content_tips">查看全文…</string>

    <string name="lll">name="search_image">找图片
    name="search_image_empty_hint">对不起，没有搜索到相关图片
     name="send_anonymous_letter_to_tip">请善意使用此功能，若被对方举报屏蔽，你将无法继续使用
    name="set_crowd">设置我的其它圈子</string>
    <string name="notif_down_file">通知下载文件</string>
    <string name="downloadProgress">下载进度</string>
    <string name="downloadSuccess">下载成功</string>
    <string name="downloadFailure">下载失败</string>
    <string name="join_now">立即加入</string>
    <string name="edit_hint_phone_number">手机号码</string>
    <string name="edit_hint_password">密码</string>
    <string name="forgot_password">忘记密码</string>
    <string name="protocol_text">为识别你朋友并展示他们的秘密， 需提供手机号，注册后不能更改。</string>
    <string name="protocol_link">使用协议</string>
    <string name="empno_not_null">工号不能为空</string>
    <string name="emppwd_wrong">密码至少4位！</string>
    <string name="password_wrong">密码错误</string>
    <string name="empno_not_saved">工号不存在</string>
    <string name="empno_activation">工号未激活</string>
    <string name="empno">工号</string>
    <string name="email">邮箱</string>
    <string name="email_use">邮箱仅用于找回密码</string>
    <string name="email_wrong">邮箱地址有误</string>
    <string name="get_password">获取密码</string>
    <string name="empno_and_email_not_match">工号和注册邮箱不匹配</string>
    <string name="sendEmail_ok_password">新密码已发送到您的邮箱</string>
    <string name="welcom">欢迎使用</string>
    <string name="msg_register_fail_empno_exist">此工号已被注册</string>
    <string name="enter_network_address">请输入网址</string>

    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>
    <string name="favorite_ok">收藏成功！</string>
    <string name="favorite_fail">收藏失败</string>
    <string name="favorite_delete_ok">取消收藏</string>
    <string name="favorite_delete_fail">取消失败</string>
    <string name="not_network">当前无网络连接</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="input_comment">我来说两句…</string>
    <string name="click_refresh">点击加载</string>
    <string name="about">关于</string>
    <string name="license">
        Copyright 2015 chenupt
        \n\n
        Licensed under the Apache License, Version 2.0 (the \"License\");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at
        \n\n
        http://www.apache.org/licenses/LICENSE-2.0
        \n\n
        Unless required by applicable law or agreed to in writing,
        software distributed under the License is distributed on an \"AS IS\" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="load_end">加载完成</string>
    <string name="edit_speak">写友说</string>
    <string name="release">发布</string>
    <string name="camera">拍照</string>
    <string name="get_pic_from_photo">从相册选取</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="album">相册</string>
    <string name="server_error">服务器异常</string>
    <string name="msg_login_fail_empno_not_exist">此工号还未注册</string>
    <string name="discover_secret_header">圈子漫游</string>
    <string name="all">全部</string>
    <string name="discover_filter_header">筛选</string>
    <string name="is_new">最新</string>
    <string name="is_hot">最热</string>
    <string name="ji_zhang_ben">记账本</string>
    <string name="time">时间</string>
    <string name="location">地点</string>
    <string name="remark">备注</string>
    <string name="category">类别</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="select_time">选择时间</string>
    <string name="select_location">选择地点</string>
    <string name="please_select_category">请选择支出类别！</string>
    <string name="please_input_money">请输入金额！</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="next_bi">下一笔</string>
    <string name="liu_shui">流水</string>
    <string name="export">导出</string>
    <string name="import_import">导入</string>
    <string name="please_input_location">请输入地点</string>
    <string name="add_location">添加地点</string>
    <string name="save_fail">保存失败！请稍后重试</string>
    <string name="location_name">add_location_name</string>
    <string name="host_location">热门地点：</string>
    <string name="please_input_category_name">请输入类别名称</string>
    <string name="max_support_four_text">最多支持4个字！</string>
    <string name="category_name_not_null">类别的名称不能为空！</string>
    <string name="remark_not_null">备注不能为空！</string>
    <string name="please_input_remark">请输入备注信息</string>
    <string name="pay">支出</string>
    <string name="income">收入</string>
    <string name="date">日期</string>
    <string name="select_test">选择测试项目</string>


</resources>