<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/et_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:hint="@string/max_support_four_text"
        android:singleLine="true"
        android:maxLength="4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@drawable/green_btn_bg"/>
        <TextView
            android:id="@+id/ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/ok"
            android:background="@drawable/green_btn_bg"/>
    </LinearLayout>

</LinearLayout>