<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="48.0dip"
    android:background="@color/white">
        <TextView
            android:textColor="@android:color/darker_gray"
            android:gravity="center"
            android:paddingTop="10.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/discover_filter_header"
            android:drawableLeft="@drawable/title_sign"
            android:drawableStart="@drawable/title_sign"
            android:drawablePadding="10.0dip" />

        <RadioGroup
            android:id="@+id/filter_radio_group"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true">
            <RadioButton
                android:id="@+id/radio_btn_new"
                android:textSize="14.0dip"
                android:textColor="@color/discover_secret_tab_text"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:checked="true"
                android:button="@null"
                android:text="@string/is_new" />
            <View
                android:background="@color/divider"
                android:layout_width="1.0px"
                android:layout_height="fill_parent"
                android:layout_margin="15.0dip" />
            <RadioButton
                android:id="@+id/radio_btn_hot"
                android:textSize="14.0dip"
                android:textColor="@color/discover_secret_tab_text"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@null"
                android:text="@string/is_hot"
                android:layout_marginRight="15.0dip"
                android:layout_marginEnd="15.0dip"/>
        </RadioGroup>

    </RelativeLayout>