<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <include layout="@layout/main_load" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/xml_login_bg"
        android:orientation="vertical"
        android:padding="30dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dip"
            android:text="@string/login_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="10pt" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/login_username"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/app_login_edit_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dip"
                android:layout_weight="1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:text="@string/login_password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="10pt" />

            <EditText
                android:id="@+id/app_login_edit_pass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dip"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/app_login_check_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dip"
                android:text="@string/login_remember"
                android:textColor="@color/text" />
            <!--
             <Button 
			android:id="@+id/app_login_btn_submit" 
			android:layout_height="wrap_content" 
			android:text="@string/login_submit" 
			android:layout_width="100dip" 
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"/>
            -->
			<!--  
            <Button
                android:id="@+id/app_login_btn_submit"
                android:layout_width="90dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/xml_login_btn"
                android:focusable="true"
                android:text="@string/login_submit" />
            -->
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <Button
                android:id="@+id/app_register_btn_submit"
                android:layout_width="90dip"
                android:layout_height="35dip"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/xml_login_btn"
                android:focusable="true"
                android:text="@string/register_submit" />
            
            <Button
                android:id="@+id/app_login_btn_submit"
                android:layout_width="90dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/xml_login_btn"
                android:focusable="true"
                android:text="@string/login_submit" />
        </RelativeLayout>
        
    </LinearLayout>

</merge>