<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_shadow"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/ui_zhanben_header_tv" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <TextView
                    android:id="@+id/ui_zhanben_tv_time2"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/ui_zhangben_category_height"
                    android:gravity="center"
                    android:background="@drawable/green_btn_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/time"
                    android:singleLine="true"
                    android:layout_margin="@dimen/dp_5" />

                <TextView
                    android:id="@+id/ui_zhanben_tv_location2"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/ui_zhangben_category_height"
                    android:gravity="center"
                    android:background="@drawable/green_btn_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/location"
                    android:singleLine="true"
                    android:layout_margin="@dimen/dp_5" />

                <TextView
                    android:id="@+id/ui_zhanben_tv_remark"
                    android:layout_width="@dimen/dp_80"
                    android:layout_height="@dimen/ui_zhangben_category_height"
                    android:layout_margin="@dimen/dp_5"
                    android:gravity="center"
                    android:background="@drawable/green_btn_bg"
                    android:textColor="@android:color/white"
                    android:text="@string/remark"
                    android:textSize="15dp"
                    android:singleLine="true"/>
            </LinearLayout>

            <include layout="@layout/send_msg_tool"/>

            <com.app.demos.layout.NumInputPan
                android:id="@+id/ui_zhanben_num_input_pan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>